--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "GPL-3.0-only",
   "repository": "github:atombrenner/aws-lambda-typescript",
   "scripts": {
-    "housekeeping": "ts-node -T src/housekeeping/start.ts",
+    "start": "ts-node -T src/index.ts",
     "test": "jest",
     "clean": "rm -rf ./dist",
-    "build": "esbuild --bundle --minify --keep-names --sourcemap --sources-content=false --target=node16 --platform=node --outfile=dist/lambda.js src/lambda.ts",
+    "build": "esbuild --bundle --minify --keep-names --sourcemap --sources-content=false --target=node16 --platform=node --outfile=dist/index.js src/index.ts",
     "zip": "ts-node -T infrastructure/zip.ts",
     "dist": "tsc && npm test && npm run build && npm run zip",
     "deploy": "ts-node -T infrastructure/deploy.ts",
@@ -19,28 +19,28 @@
     "node": ">=16"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.121.0",
-    "@aws-sdk/client-sts": "^3.121.0"
+    "@aws-sdk/client-s3": "^3.179.0",
+    "@aws-sdk/client-sts": "^3.179.0"
   },
   "devDependencies": {
     "@atombrenner/cfn-stack": "^2.0.2",
-    "@aws-sdk/client-lambda": "^3.121.0",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.10.4",
+    "@aws-sdk/client-lambda": "^3.179.0",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@tsconfig/node16": "^1.0.3",
     "@types/adm-zip": "^0.5.0",
-    "@types/aws-lambda": "^8.10.97",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^14.17.4",
+    "@types/aws-lambda": "^8.10.106",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.23",
     "adm-zip": "^0.5.9",
-    "babel-jest": "^28.1.0",
-    "babel-loader": "^8.1.0",
-    "esbuild": "^0.14.39",
+    "babel-jest": "^29.0.3",
+    "babel-loader": "^8.2.5",
+    "esbuild": "^0.15.9",
     "husky": "^8.0.1",
-    "jest": "^28.1.2",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   }
 }
